Fix hobby section with img scaling and card alignment

--- a/less_src/hobbies.less
+++ b/less_src/hobbies.less
@@ -1,6 +1,6 @@
 #hobbies {
   width: 100%;
-  height: 503px;
+  height: 425px;
   background-color: #E9EBEE;
   padding-left: 15px;  
   border: 1px solid;
@@ -13,19 +13,24 @@
     width: 300px;
     text-align: center;
     margin: 5px;
-    padding-left: 5px;
+    padding-left: 10px;
     h6 {
       text-align: center;
     }
+    .img-container {
+      width: 275px;
+      height: 200px;
+    }
     img {
-      // width: 275px;
-      max-width: 275px; 
-      max-height: 275px;
+      max-width:100%; 
+      max-height:100%;
+      object-fit: contain;
     }
 
     p {
-      // padding-top: 5px;
-      font-size: 2.2vmin;
+      padding-top: 5px;
+      // font-size: 2.2vmin;
+      font-size: 12px;
       width: 275px;
     }
   }
